--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <h1>Welcome to Diablo</h1>
         <p>A thrilling and exciting adventure awaits you!</p>
     </header>
-    
+    <script src="/js/data.js"></script>
+
     <nav>
         <ul>
             <!-- Links for nav -->
@@ -51,6 +52,8 @@
     <footer>
         <p>&copy; 2023 DIABLO ENTHUSIASTS. All rights reserved.</p>
     </footer>
+    <script src="/js/data.js"></script>
+
 </body>
 </html>
 
