--- a/index.html
+++ b/index.html
@@ -5,22 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diablo</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Spectral:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <header>
-        <h1>Welcome to Diablo</h1>
-        <p>A thrilling and exciting adventure awaits you!</p>
-    </header>
-    <script src="/js/data.js"></script>
+    <div class="top-bar">
+        <nav class="navbar">
+            <ul>
+                <!-- Links for nav -->
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="info.html">Info</a></li>
+                <li><a href="reviews.html">Reviews</a></li>
+            </ul>
+        </nav>
+    </div>
 
-    <nav>
-        <ul>
-            <!-- Links for nav -->
-            <li><a href="about.html">About</a></li>
-            <li><a href="info.html">Info</a></li>
-            <li><a href="reviews.html">Reviews</a></li>
-        </ul>
-    </nav>
+    <header>
+    </header>
+
+<script src="/js/data.js"></script>
+
     <!-- putting MEDIA HERE -->
     <section id="about">
         <h2>About Diablo</h2>
