--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
         <header>
             <h1>
-                <a href ="index.html" ><img src ="./css/Diablo_Logo.png"  alt = "logo" class= "logo-img"></a>
+                <a href ="index.html" ><img src ="../images/Diablo_Logo.png"  alt = "logo" class= "logo-img"></a>
             </h1>
         <nav>
             <ul class = "nav__links">
