--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css"> 
     <!-- FAVICON -->
-    <link rel="icon" type="image/png" href="./css/pngwing.com.png">
+    <link rel="icon" type="image/png" href="../images/pngwing.com.png">
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Rokkitt:wght@400;700&display=swap" rel="stylesheet">
 
