--- a/info.html
+++ b/info.html
@@ -19,7 +19,7 @@
 
         <header>
             <h1>
-                <a href ="index.html" ><img src ="../images/Diablo_Logo.png"  alt = "logo" class= "logo-img"></a>
+                <a href ="index.html" ><img src ="./images/Diablo_Logo.png"  alt = "logo" class= "logo-img"></a>
             </h1>
         <nav>
             <ul class = "nav__links">
@@ -42,13 +42,13 @@
                 <p>The game Diablo starts with all the stories from Sanctuary</p>
                 <p>Which was a battlefield between demons and angels</p>
                 <p>All of the well known history of this series is listed below....</p>
-                <p><img src="../images/HistoryFull.jpg" class="zoomable-image" alt="Sanctuary"></p>
+                <p><img src="./images/HistoryFull.jpg" class="zoomable-image" alt="Sanctuary"></p>
 
                 <h2>Main story of Diablo 4</h2>
                 <p>Diablo 4 is about battle between heaven and hell, which was stopped by Lilith's death long time ago</p>
                 <p>However she is ressurected by 1st generation nephalem and she will fight with Inarius who is a fallen angle</p>
                 <p>Inarius was repelled from heaven because he fall in love with Lilith who is devil and the Children born between them is called Nephalems who are users</p>
-                <p><img src="../images/lilithandinarius.webp" class="zoomable-image" alt="Sanctuary"></p>
+                <p><img src="./images/lilithandinarius.webp" class="zoomable-image" alt="Sanctuary"></p>
 
 
                 <h1>History of Diablo Series</h1>
@@ -126,7 +126,7 @@
             <p>Diablo is heavely rely on the end game contents, so if you are a person who would like to see your charater making progress</p>
             <p>on damage, skills and other abilities i recomend you to skip the story lines and just do the main quests</p>
             <p>Morover do not miss the field boss quests since it drops legendry items!</p>
-            <p><img src="../images/Combat_Scosglen_Multiplayer_World_Boss_png_jpgcopy.0.webp" class="zoomable-image" alt="Sanctuary"></p>
+            <p><img src="./images/Combat_Scosglen_Multiplayer_World_Boss_png_jpgcopy.0.webp" class="zoomable-image" alt="Sanctuary"></p>
 
             <p> if you are a person who would like to enjoy this game slowly then, watch all the cinematics and do all the sub and main quests available</p>
             <p>Blizzard is famous for making good cinematics so you will not be disappointed!!</p>
