--- a/info.html
+++ b/info.html
@@ -19,7 +19,7 @@
 
         <header>
             <h1>
-                <a href ="index.html" ><img src ="./images/Diablo_Logo.png"  alt = "logo" class= "logo-img"></a>
+                <a href ="index.html" ><img src ="images/Diablo_Logo.png"  alt = "logo" class= "logo-img"></a>
             </h1>
         <nav>
             <ul class = "nav__links">
@@ -42,7 +42,7 @@
                 <p>The game Diablo starts with all the stories from Sanctuary</p>
                 <p>Which was a battlefield between demons and angels</p>
                 <p>All of the well known history of this series is listed below....</p>
-                <p><img src="./images/HistoryFull.jpg" class="zoomable-image" alt="Sanctuary"></p>
+                <p><img src="/images/HistoryFull.jpg" class="zoomable-image" alt="Sanctuary"></p>
 
                 <h2>Main story of Diablo 4</h2>
                 <p>Diablo 4 is about battle between heaven and hell, which was stopped by Lilith's death long time ago</p>
