--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/styles.css"> 
     <!-- FAVICON -->
-    <link rel="icon" type="image/png" href="../images/pngwing.com.png">
+    <link rel="icon" type="image/png" href="./images/pngwing.com.png">
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Rokkitt:wght@400;700&display=swap" rel="stylesheet">
 
@@ -17,7 +17,7 @@
 </head>
         <header>
             <h1>
-                <a href ="index.html" ><img src ="../images/Diablo_Logo.png"  alt = "logo" class= "logo-img"></a>
+                <a href ="index.html" ><img src ="./images/Diablo_Logo.png"  alt = "logo" class= "logo-img"></a>
             </h1>
         <nav>
             <ul class = "nav__links">
