--- a/about.html
+++ b/about.html
@@ -31,10 +31,26 @@
         </nav>
         </header>
 
-
-
-
         <body>
+            <section id="honesty-statement" class="content-section">
+                <h2>Honesty Statement</h2>
+                <p>I declare that my assessment is wholly my own work in accordance with Seneca Academic Policy. 
+                <p>No part of this assessment has been copied manually or electronically from any other source (including web sites) </p>
+                <p>except for the information supplied by the WEB222 instructors and / or made available in this assessment for my use. </p>
+                <p>I also declare that no part of this assignment has been distributed to other students.</p>
+                <p>August 9th, 2023 Sangjune Lee</p>
+            </section>
+
+            <section id="content-reference" class="content-section">
+                <h2>Content references</h2>
+                <p>Favicon diablo log from https://www.pngwing.com/en/free-png-nlrpl</p>
+                <p>Background image from https://www.wallpaperflare.com/diablo-4-lilith-diablo-blizzard-entertainment-wallpaper-yjbus</p>
+                <p>Diablo logo image from https://blizzard.gamespress.com/BlizzConline-Co-Streamer-Asset-Pack</p>
+                <p>Info page, Sanctuary timeline image from https://www.purediablo.com/the-diablo-history-timeline</p> 
+                <p>Info page, Lilith and inarius pic form https://www.mirror.co.uk/gaming/diablo-4-should-offline-mode-30363158</p>
+                <p>Info page Fieldboss image from https://cdn.vox-cdn.com/thumbor/OQXvMt4ETDN_Bk5_22YRdFwVL-s=/0x0:7296x4416/920x613/filters:focal(3065x1625:4231x2791):format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/65615824/Combat_Scosglen_Multiplayer_World_Boss_png_jpgcopy.0.jpg</p>
+            </section>
+
             <section id="about" class="content-section">
                 <h2>About The Nephalems</h2>
                 <p>Welcome to The Nephalems, your ultimate source for all things related to Diablo 4! My name is Sangjune Lee, and I'm the creator of this website.</p>
@@ -52,13 +68,7 @@
                 <p>Sangjune Lee</p>
             </section>
 
-            <section id="honesty-statement" class="content-section">
-                <h2>Honesty Statement</h2>
-                <p>I declare that my assessment is wholly my own work in accordance with Seneca Academic Policy. 
-                <p>No part of this assessment has been copied manually or electronically from any other source (including web sites) </p>
-                <p>except for the information supplied by the WEB222 instructors and / or made available in this assessment for my use. </p>
-                <p>I also declare that no part of this assignment has been distributed to other students.</p>
-            </section>
+ 
         
 
             <section id="newsletter" class="content-section">
