--- a/reviews.html
+++ b/reviews.html
@@ -56,7 +56,7 @@
         </body>
         
 
-        <script src="/js/data.js"></script>
+        <script src="js/data.js"></script>
         </html>
         
 
