--- a/about.html
+++ b/about.html
@@ -49,6 +49,7 @@
                 <p>Info page, Sanctuary timeline image from https://www.purediablo.com/the-diablo-history-timeline</p> 
                 <p>Info page, Lilith and inarius pic form https://www.mirror.co.uk/gaming/diablo-4-should-offline-mode-30363158</p>
                 <p>Info page Fieldboss image from https://cdn.vox-cdn.com/thumbor/OQXvMt4ETDN_Bk5_22YRdFwVL-s=/0x0:7296x4416/920x613/filters:focal(3065x1625:4231x2791):format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/65615824/Combat_Scosglen_Multiplayer_World_Boss_png_jpgcopy.0.jpg</p>
+                <p>Sakura.css has been imported from previous assignment and edited</p>
             </section>
 
             <section id="about" class="content-section">
@@ -85,7 +86,6 @@
         <footer>
             <p>&copy; 2023 Sangjune Lee. All rights reserved.</p>
         </footer>
-        <script src="/js/data.js"></script>
         </html>
         
 
