--- a/info.html
+++ b/info.html
@@ -147,7 +147,7 @@
         <footer>
             <p>&copy; 2023 Sangjune Lee. All rights reserved.</p>
         </footer>
-        <script src="/js/data.js"></script>
+        <script src="js/data.js"></script>
         </html>
         
 
