--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!-- Youtube link to video presentation
+https://youtu.be/sQcPVU1Nb_4
+Link to the project website
+https://sjlee411.github.io/SEN-WEB-FINAL/ -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -77,11 +82,12 @@
                     <button type="submit" id="joinButton">Join</button>
                 </form>
             </section>
+            <footer>
+                <p>&copy; 2023 Sangjune Lee. All rights reserved.</p>
+            </footer>
         </body>
         
-        <footer>
-            <p>&copy; 2023 Sangjune Lee. All rights reserved.</p>
-        </footer>
+
         </html>
         
 
